--- a/packages/frontend/src/components/NeighborhoodSidebar/NeighborhoodSidebar.module.scss
+++ b/packages/frontend/src/components/NeighborhoodSidebar/NeighborhoodSidebar.module.scss
@@ -34,10 +34,12 @@
     flex-grow: 1;
     overflow-y: scroll;
     padding-top: 2px;
-    scrollbar-width: none;
+    -ms-overflow-style: none;
+    /* IE and Edge */
 
     &::-webkit-scrollbar {
         width: 0;
+        display: none;
     }
 }
 
