--- a/packages/frontend/src/components/NeighborhoodSidebar/NeighborhoodSidebar.module.scss
+++ b/packages/frontend/src/components/NeighborhoodSidebar/NeighborhoodSidebar.module.scss
@@ -36,6 +36,7 @@
     padding-top: 2px;
     -ms-overflow-style: none;
     /* IE and Edge */
+    scrollbar-width: none;
 
     &::-webkit-scrollbar {
         width: 0;
