--- a/packages/frontend/scss/manifest.scss
+++ b/packages/frontend/scss/manifest.scss
@@ -106,6 +106,7 @@
 @import 'components/bot_settings';
 @import 'components/deep-tree-echo';
 @import 'components/ai_neighborhood_dashboard';
+@import 'components/deep-tree-echo-avatar';
 
 // @import './chat/chat';
 // @import 'message/message';
